--- a/index.html
+++ b/index.html
@@ -612,9 +612,9 @@
       </svg>
     </button>
     <!-- <script type="module" src="/src/main.js"></script> -->
-    <script src="/src/shared/lib/faq.js"></script>
-    <script src="/src/shared/lib/pricing.js"></script>
-    <script src="/src/shared/lib/backToTop.js"></script>
-    <script src="/src/shared/lib/reviewsCarousel.js"></script>
+    <script type="module" src="/src/shared/lib/faq.js"></script>
+    <script type="module" src="/src/shared/lib/pricing.js"></script>
+    <script type="module" src="/src/shared/lib/backToTop.js"></script>
+    <script type="module" src="/src/shared/lib/reviewsCarousel.js"></script>
   </body>
 </html>
